tests/parser-test-files/bad-files/parse-attribute.4.error
error: Malformed repr attribute
  --> test:4:12
   |
 4 |  (repr :enum 5)
   |              ^ unexpected form
