tests/parser-test-files/bad-files/parse-attribute.4.coal
;; BAD: Parse Attribute
(package test-package)

(repr :enum 5)
(define-type T)
